# S3-Clock

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.zh.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp
main/Audio/Speaker/: spkr.cpp
main/RGB/: rgb.cpp
main/RTC/: ds1302z.cpp
main/UI/: clock.cpp
main/WIFI/: wifi.cpp
main/include/: RTC.h  config.h  my_wifi.h  pin_assign.h  rgb.h  spkr.h  ui.h
